--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -15,3 +15,13 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+  backend:
+    image: ruzzik/foodgram:latest
+    restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+
+volumes:
+  static_value:
+  media_value:
