--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -7,6 +7,14 @@ services:
       dockerfile: Dockerfile
     volumes:
       - ../frontend/:/app/result_build/
+  db:
+   image: postgres:13.0-alpine
+   volumes:
+     - db_data:/var/lib/postgresql/data/
+   env_file:
+     - ./.env
+   #ports:
+    #  - "5432:5432"
   nginx:
     image: nginx:1.19.3
     ports:
@@ -15,13 +23,19 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
       - ../frontend/build:/usr/share/nginx/html/
       - ../docs/:/usr/share/nginx/html/api/docs/
+      - static_value:/usr/share/nginx/html/backend/static/
+      - media_value:/usr/share/nginx/html/backend/media/
+    depends_on:
+      - backend
   backend:
     image: ruzzik/foodgram:latest
     restart: always
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
-
+    depends_on:
+      - db
 volumes:
   static_value:
   media_value:
+  db_data:
