--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,8 +1,14 @@
 server {
     listen 80;
-    location /api/ {
+    location ~ ^/(api|admin)/ {
       proxy_pass http://backend:8000;
     }
+
+    location ~ ^/(static|media)/ {
+      root /usr/share/nginx/html;
+      try_files $uri /backend/$uri =404;
+    }
+
     location /api/docs/ {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
