--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -2,9 +2,7 @@ version: '3.3'
 services:
 
   frontend:
-    build:
-      context: ../frontend
-      dockerfile: Dockerfile
+    image: ruzzik/foodgram-react:latest
     volumes:
       - ../frontend/:/app/result_build/
   db:
@@ -13,8 +11,6 @@ services:
      - db_data:/var/lib/postgresql/data/
    env_file:
      - ./.env
-   #ports:
-    #  - "5432:5432"
   nginx:
     image: nginx:1.19.3
     ports:
@@ -35,6 +31,8 @@ services:
       - media_value:/app/media/
     depends_on:
       - db
+    env_file:
+     - ./.env
 volumes:
   static_value:
   media_value:
