--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -1,5 +1,13 @@
 server {
     listen 80;
+    server_name 51.250.87.223;
+    server_tokens off;
+
+    location ~ /api/docs/ {
+        root /usr/share/nginx/html;
+        try_files $uri $uri/redoc.html;
+    }
+
     location ~ ^/(api|admin)/ {
       proxy_pass http://backend:8000;
     }
@@ -9,10 +17,6 @@ server {
       try_files $uri /backend/$uri =404;
     }
 
-    location /api/docs/ {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/redoc.html;
-    }
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
