--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,6 +8,11 @@ server {
         try_files $uri $uri/redoc.html;
     }
 
+    location ~ /recipes/(media/.+){
+      root /usr/share/nginx/html;
+      try_files $1 /backend/$1 =404;
+    }
+
     location ~ ^/(api|admin)/ {
       proxy_pass http://backend:8000;
     }
