--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -8,7 +8,7 @@ server {
         try_files $uri $uri/redoc.html;
     }
 
-    location ~ /recipes/(media/.+){
+    location ~ /.+/(media/.+){
       root /usr/share/nginx/html;
       try_files $1 /backend/$1 =404;
     }
